package sourcecodemodeler.controller;

import org.w3c.dom.Document;
import org.w3c.dom.Node;
import org.w3c.dom.NodeList;
import sourcecodemodeler.model.XMLClass;

import javax.xml.parsers.DocumentBuilder;
import javax.xml.parsers.DocumentBuilderFactory;
import javax.xml.parsers.ParserConfigurationException;
import java.io.BufferedReader;
import java.io.File;
import java.io.IOException;
import java.io.InputStreamReader;
import java.util.ArrayList;
import java.util.List;

/*
    This class iterates over the tags of XML documents to retrieve data (data selection).
    The data is then used to create classes that can later be displayed in the produced class diagram.
 */
public class XMLIterator {
    private final String pathToXMLDirectory = System.getProperty("user.dir") + "\\source-code-modeler\\resources\\converted_xml\\";
    private static List<XMLClass> xmlClasses;

    //===== Constructor(s) =====//
    public XMLIterator() {
        this.xmlClasses = new ArrayList<>();
    }

    //===== Getters & Setters =====//
    public List<XMLClass> getXmlClasses() {
        return xmlClasses;
    }

    public static String getStringifiedXmlClasses() {

        //manually creating a list of XML class instances to test visualisation
        //had to make it static to be able to reference it from Home's visualiseXML method

        xmlClasses = new ArrayList<>();

        XMLClass class1 = new XMLClass();
        class1.setName("User");
        class1.addAttribute("String name");
        class1.addAttribute("int age");
        class1.addMethod("String getName()");

        XMLClass class2 = new XMLClass();
        class2.setName("Balance");
        class2.addAttribute("int money");
        class2.addMethod("int returnMoney()");

        XMLClass class3 = new XMLClass();
        class3.setName("Users");
        class3.addAttribute("List<String> users");
        class3.addMethod("String getUser()");
        class3.addMethod("void setUser(String user)");

        xmlClasses.add(class1);
        xmlClasses.add(class2);
        xmlClasses.add(class3);


        //now handling the getting part

        String classes = "";

        for (XMLClass cl: xmlClasses){
            classes += cl.toString();
        }

        return classes;
    }



    //===== Methods =====//
    // This method prints the raw content of the latest converted file.
    public void printXMLFile(String fileName) {
        String pathToXMLFile = pathToXMLDirectory + fileName;
        ProcessBuilder pb = new ProcessBuilder(
                "cmd.exe",
                "/c",
                "more " + pathToXMLFile
        );
        pb.redirectErrorStream(true);
        try {
            Process p = pb.start();
            BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));
            String line;
            while (true) {
                line = br.readLine();
                if (line == null) { break; }
                System.out.println(line);
            }
        } catch (IOException ioe) {
            ioe.printStackTrace();
        }
    }

    // Creates a class (XMLClass) that only contains the data displayed in a class of a class diagram.
    public void createXMLClass(String name) {
        XMLClass xmlClass = new XMLClass();
        xmlClass.setName(name
                .replace(".xml", "")
                .replace(".c", "")
                .replace(".cpp", "")
                .replace(".java", "")
        );
        System.out.println("Class name: " + xmlClass.getName());
        setAttributes(name, xmlClass);
        System.out.println("Attributes: ");
        // TODO: Exclude local attributes inside methods.
        for (String attribute : xmlClass.getAttributes()) {
            System.out.println(attribute);
        }
        System.out.println("Methods: ");
        // TODO: Filter out everything except access modifier, return type, method name and parameters.
        for (String method : xmlClass.getMethods()) {
            System.out.println(method
                    .replace("public", "+")
                    .replace("private", "-")
            );
        }
    }

    // Iterates through the XML document to retrieve attributes.
    private void setAttributes(String xmlFileName, XMLClass xmlClass) {
        DocumentBuilderFactory docBuilderFactory = DocumentBuilderFactory.newInstance();
        try {
            DocumentBuilder docBuilder = docBuilderFactory.newDocumentBuilder();
            Document doc = docBuilder.parse(new File(pathToXMLDirectory + xmlFileName));

            NodeList nodeList = doc.getElementsByTagName("decl_stmt"); // Tag for attributes.
            for (int i = 0; i < nodeList.getLength(); i++) {
                Node node = nodeList.item(i);
                if (node.getNodeType() == Node.ELEMENT_NODE) {
                    xmlClass.addAttribute(node.getTextContent()
                            .replace("public", "+")
                            .replace("private", "-")
                    );
                }
            }

            // Move to separate function for method retrieval.
            nodeList = doc.getElementsByTagName("function"); // Tag for methods.
            for (int i = 0; i < nodeList.getLength(); i++) {
                Node node = nodeList.item(i);
                if (node.getNodeType() == Node.ELEMENT_NODE) {
                    xmlClass.addMethod(node.getTextContent());
                }
            }

        } catch (ParserConfigurationException | org.xml.sax.SAXException | IOException e) {
            e.printStackTrace();
        }
    }

}
