@startuml

title __SOURCE-CODE-MODELER's Class Diagram__\n

  package sourcecodemodeler {
    package sourcecodemodeler.view {
      class Home {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.view {
      class Home {
      }
    }
  }
  

  package sourcecodemodeler {
    class Main {
    }
  }
  

  package sourcecodemodeler {
    class Main {
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.controller {
      class SourceCodeConverter {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.controller {
      class SourceCodeConverter {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.controller {
      class Visualiser {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.model {
      class XMLClass {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.model {
      class XMLClass {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.controller {
      class XMLIterator {
      }
    }
  }
  

  package sourcecodemodeler {
    package sourcecodemodeler.controller {
      class XMLIterator {
      }
    }
  }
  

  Home o-- SourceCodeConverter : sourceCodeConverter
  Home o-- XMLIterator : xmlIterator
  Home o-- SourceCodeConverter : sourceCodeConverter
  Home o-- XMLIterator : xmlIterator
  Main -up-|> Application
  Main -up-|> Application
  Visualiser -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
